--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   },
   "dependencies": {
     "@distube/ytdl-core": "^4.15.1",
+    "@hono/node-server": "^1.13.7",
     "async-lock": "^1.4.1",
+    "dotenv": "^16.4.5",
+    "fluent-ffmpeg": "^2.1.3",
     "hono": "^4.6.8",
     "install": "^0.13.0",
     "ioredis": "^5.4.1"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/fluent-ffmpeg": "^2.1.27"
   }
 }
